--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "express": "^5.2.1",
     "mysql2": "^3.15.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.7.2"
+    "jsonwebtoken": "^9.0.2"
   }
 }
